# dr-manhattan

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CNAME  README.md  index.html  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  pages.yml
backtest/: fetch_data.ipynb
backtest/example_ipynb/: fetch_data_example.ipynb  fetch_data_s3_example.ipynb
dr_manhattan/: __init__.py
dr_manhattan/base/: __init__.py  errors.py  exchange.py  exchange_config.py  exchange_factory.py  order_tracker.py  websocket.py
dr_manhattan/cross_exchange/: types.py
dr_manhattan/exchanges/: __init__.py  kalshi.py  limitless.py  opinion.py  polymarket.py  polymarket_ws.py  predictfun.py  predictfun_ws.py
dr_manhattan/models/: __init__.py  crypto_hourly.py  market.py  nav.py  order.py  position.py
dr_manhattan/strategies/: __init__.py  base.py
dr_manhattan/utils/: __init__.py  logger.py
examples/: README.md  cross_exchange_simple.py  list_polymarket_crypto_hourly_markets.py  spread_strategy.py
scripts/: README.md
scripts/polymarket/: check_approval.py
tests/: __init__.py  test_base.py  test_errors.py  test_integration.py  test_kalshi.py  test_limitless.py  test_models.py  test_polymarket.py
tests/mcp/: test_exchange_tools.py
two_face/: __init__.py
two_face/base/: __init__.py  errors.py  exchange.py
two_face/exchanges/: __init__.py  polymarket.py
two_face/models/: __init__.py  market.py
website/: docs.html  index.html
wiki/: README.md
wiki/exchanges/: TEMPLATE.md  kalshi.md  polymarket.md  polymarket_setup.md
