[project]
name = "dr-manhattan"
version = "0.1.0"
description = "CCXT-style unified API for prediction markets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "websockets>=15.0.1",
    "python-dotenv>=1.0.0",
    "eth-account>=0.11.0",
    "py-clob-client>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
